Fixed layout issues on homepage

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ h2 {
 .project-item img {
     width: 100px;
     height: 100px;
-    border-radius: 30%;
+    border-radius: 50%;
     object-fit: cover;
     margin-right: 20px;
     /* Accent color border */
